--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -86,6 +86,7 @@ small, a.small, footer, .ctrls a { font-size: 0.85em }
 }
 del { background: #f88 }
 ins { background: #8f8 }
+del, ins { line-height: 1.3 }
 li {
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
