--- a/http/a/main.css
+++ b/http/a/main.css
@@ -85,6 +85,7 @@ abbr { border-bottom: 1px dashed #222 }
 }
 del { background: #f88 }
 ins { background: #8f8 }
+del, ins { line-height: 1.3 }
 li {
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
